devel
-----

* Fix ES-2678: In the upgrade scenario, we disable the ClusterFeature.
  We should therefore check before accessing clusterInfo() whether we're
  in an upgrade scenario. Added those checks in iresearch.

* Reverted RocksDB defaults for maximum wal size, number of sub
  compactions and compaction read ahead to stay close to established
  behaviour.

* Fix BTS-2214: In a rare hash collision situation it can happen that a
  valid edge in an enterprise graph fails to validate and is rejected.

* Fix BTS-2216: Fix a possible use-after-free. It can occur when a query is
  killed at the end of being prepared. Only non-streaming cursors in a cluster
  are affected.

* Fix BTS-2211: AQL queries using the async-prefetch rule, which result in a
  failure due to a runtime exception or possibly a kill, had a possible race
  during query destruction that could result in undefined behavior (e.g.
  memory leaks or crashes).

* Fix BTS-2213: Adds a retry logic to the UserManager::updateUser to retry in certain situations 
  (e.g. DB/Col create) until it succeeds instead of giving up after some _rev conflicts.

* Fix fuzzer tests. Actually look at `Connection: Close` HTTP header and
  do not expect the connection to stay open if we see this. This fixes
  BTS-2185.

* Fix BTS-2220: Fix failing autoupgrade of databases in cluster mode.
  This was caused by key generation now using the cluster key
  generator on dbservers, which fails during upgrade with a message that
  the database was shutting down.

* Fix BTS-2219: Fix possible crashes with the log id [80e0e] and corresponding
  message
  "thread '<thread name>' is not stopped but created. shutting down hard".

* Fix BTS-2217: If an error happens during startup, a disabled feature can
  lead to a crash. Additionally signal that the server is stopping during
  the unexpected shutdown so that in particular the RocksDBSyncThread does
  not crash with an assertion failure.
